--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="product">
         <h2>All In One YG-G5</h2>
         <ul>
-            <li><a href="product/product-a/G3v-8.pdf" target="_blank">查看/下载产品A说明书 (PDF)</a></li>
+            <li><a href="product/product-/product-a/G3v-8.pdf" target="_blank">查看/下载产品A说明书 (PDF)</a></li>
             <!-- 可以继续添加更多链接 -->
         </ul>
     </div>
