--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     </style>
 </head>
 <body>
+	<script src="https://o.alicdn.com/appflow/chatbot/v1/AppflowChatSDK.js"></script>
+<script>
+    window.APPFLOW_CHAT_SDK.init({
+    integrateConfig: {
+        integrateId: 'cit-d6605fec03f744628903',
+        domain: {
+            requestDomain: 'https://1604163742706683.appflow.aliyunnest.com'
+        }
+    }
+});
+</script>
     <h1>Product</h1>
     <p>请根据您的产品型号，查找对应的说明书和指导视频。</p>
 
